--- a/School/WebApplication1/Views/Account/List.cshtml
+++ b/School/WebApplication1/Views/Account/List.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Account";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "Account");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
     var data = Model.Data.ToList();
 }
 
@@ -18,7 +20,7 @@
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
-                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-Account" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-Account" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
@@ -64,5 +66,10 @@
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
- @*using external js file*@
+@*using external js file*@
 <script src="/js/app/account.js"></script>
+
+<script>
+    var currentPage = @currentPage;
+    var pageSize = @pageSize;
+</script>
