--- a/School/WebApplication1/Views/Account/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/Account/_ListPartial.cshtml
@@ -30,7 +30,7 @@
                 <td class="w-8p">
                     <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
 
-                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
+                    <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
                 </td>
             </tr>
         }
