--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -11,7 +11,9 @@
         </li>
         @for (var i = 1; i <= totalPages; i++)
         {
-            <li class="page-item"><a class="page-link" href="/@Model.Item3?pageIndex=@i&pageSize=@Model.Item2">@i</a></li>
+            var active = "";
+            if (i == 1) active = "active";
+            <li class="page-item @active"><a class="page-link" href="/@Model.Item3?pageIndex=@i&pageSize=@Model.Item2">@i</a></li>
         }
 
         <li class="page-item">
