--- a/School/WebApplication1/Views/ChiTietDH/List.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/List.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "ChiTietDonHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "ChiTietDonHang");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
+    var data = Model.Data.ToList();
 }
 <div class="row">
     <div class="col-md-12">
@@ -16,7 +19,7 @@
                     <div class="col-md-10">
                         <form style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
-                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-chitietdonhang" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-chitietdonhang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
@@ -48,46 +51,11 @@
                             <th class="w-6p">Thao tác</th>
                         </tr>
                 </table>
-                <div class="table-responsive">
-                    <table class="table tbl-contents">
-                        <tbody>
-                            @{
-                                var count = 0;
-                            }
-                            @foreach (var item in Model.Data.ToList())
-                            {
-                                count++;
-                                <tr>
-                                    <td class="w-5p">
-                                        @count
-                                    </td>
-                                    <td class="w-20p">
-                                        @item.CreatedDate
-                                    </td>
-                                    <td class="w-20p">
-                                        @item.UpdatedDate
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.MaDH
-                                    </td>
-                                    <td class="w-10p">
-                                        @item.DonGia
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.SoLuong
-                                    </td>
 
-
-                                    <td class="w-6p">
-                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
-
-                                        <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                <div class="table-responsive" id="chitietdonhang-list">
+                    @await Html.PartialAsync("_ListPartial", data)
                 </div>
+
             </div>
         </div>
     </div>
@@ -97,13 +65,10 @@
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
+@*using external js file*@
+<script src="/js/app/chitietdonhang.js"></script>
+
 <script>
-    function search(event) {
-        event.preventDefault();
-        var searchTxt = $('#search-chitietdonhang').val();
-
-        var path = `${window.location.origin}/ChiTietDonHang?pageIndex=1&pageSize=20&maDh=${searchTxt}`;
-
-        window.location.href = path;
-    };
+    var currentPage = @currentPage;
+    var pageSize = @pageSize;
 </script>
