--- a/School/WebApplication1/Views/DonHang/List.cshtml
+++ b/School/WebApplication1/Views/DonHang/List.cshtml
@@ -4,19 +4,22 @@
     ViewData["Title"] = "DonHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize,"DonHang");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
+    var data = Model.Data.ToList();
 }
 <div class="row">
     <div class="col-md-12">
         <div class="card" style="margin-bottom: 11px;">
             <div class="card-header">
                 <div class="row">
-                    <form class="update col-md-2" action="https://localhost:44319/DonHang/Add">
+                    <form class="update col-md-2" action="Add">
                         <button type="submit" class="btn btn-primary btn-round">Thêm mới</button>
                     </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group from-inline">
-                                <input placeholder="Nhập trạng thái đơn hàng" type="text" name="searchkey" id="search-DonHang" class="form-control form-inline" />
+                                <input placeholder="Nhập" type="text" name="searchkey" id="search-DonHang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="form-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
@@ -45,58 +48,23 @@
                             <th class="w-5p">Thao tác</th>
                         </tr>
                 </table>
-                <div class="table-responsive">
-                    <table class="table tbl-contents">
-                        <tbody>
-                            @{
-                                var count = 0;
-                            }
-                            @foreach (var item in Model.Data.ToList())
-                            {
-                                count++;
-                            <tr>
-                                <td class="w-3p">
-                                    @count
-                                </td>
-                            
-                                <td class="w-10p">
-                                    @item.PhiVanChuyen
-                                </td>
-                                <td class="w-5p">
-                                    @item.TongTien
-                                </td>
-                                <td class="w-10p">
-                                    @item.TrangThaiDonHang
-                                </td>
-                                <td class="w-10p">
-                                    @item.TrangThaiThanhToan
-                                </td>
-                                <td class="w-5p">
-                                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
-                                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
-                                </td>
-                            </tr>
-                            }
-                        </tbody>
-                    </table>
+
+                <div class="table-responsive"id="donhang-list">
+                    @await Html.PartialAsync("_ListPartial",data)
                 </div>
+
             </div>
         </div>
     </div>
 </div>
+
 <div style="margin: 0 auto">
 
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
+<script src="/js/app/donhang.js"></script>
 <script>
-    function search(event) {
-        event.preventDefault();
-
-        var searchTxt = $('#search-DonHang').val();
-
-        var path = `${window.location.origin}/DonHang?pageIndex=1&pageSize=20&trangthaidonhang=${searchTxt}`;
-
-        window.location.href = path;
-    }
+    var currentPage = @currentPage;
+    var pageSize = @pageSize;
 </script>
