--- a/School/WebApplication1/Views/HangHoa/List.cshtml
+++ b/School/WebApplication1/Views/HangHoa/List.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "HangHoa";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize,"HangHoa");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
+    var data = Model.Data.ToList();
 }
 <div class="row">
     <div class="col-md-12">
@@ -16,7 +19,7 @@
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
-                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-HangHoa" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-HangHoa" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
@@ -45,41 +48,11 @@
                             <th class="w-8p">Thao tác</th>
                         </tr>
                 </table>
-                <div class="table-responsive">
-                    <table class="table tbl-contents">
-                        <tbody>
-                            @{
-                                var count = 0;
-                            }
-                            @foreach (var item in Model.Data.ToList())
-                            {
-                                count++;
-                                <tr>
-                                    <td class="w-5p">
-                                        @count
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.TenHH
-                                    </td>
-                                    <td class="w-12p">
-                                        @item.SoLuong
-                                    </td>
-                                    <td class="w-10p">
-                                        @item.DonGia
-                                    </td>
-                                    <td class="w-10p">
-                                        @item.ChiTiet
-                                    </td> 
-                                    <td class="w-8p">
-                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
-                               
-                                        <a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+
+                <div class="table-responsive" id="hanghoa-list">
+                    @await Html.PartialAsync("_ListPartial",data)
                 </div>
+             
             </div>
         </div>
     </div>
@@ -89,13 +62,8 @@
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
+<script src="~/js//app/hanghoa.js"></script>
 <script>
-    function search(event) {
-        event.preventDefault();
-        var searchTxt = $('#search-HangHoa').val();
-
-        var path = `${window.location.origin}/HangHoa?pageIndex=1&pageSize=20&name=${searchTxt}`;
-
-        window.location.href = path;
-    };
+    var currentPage = @currentPage;
+    var pageSize = @pageSize;
 </script>
