--- a/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
+++ b/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "KhachHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "KhachHang");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
+    var data = Model.Data.ToList();
 }
 <div class="row">
     <div class="col-md-12">
@@ -16,7 +19,7 @@
                     <div class="col-md-10">
                         <form style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
-                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-khachhang" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-khachhang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
@@ -48,122 +51,23 @@
                             <th class="w-6p">Thao tác</th>
                         </tr>
                 </table>
-                <div class="table-responsive">
-                    <table class="table tbl-contents">
-                        <tbody>
-                            @{
-                                var count = 0;
-                            }
-                            @foreach (var item in Model.Data.ToList())
-                            {
-                                count++;
-                                <tr>
-                                    <td class="w-5p">
-                                        @count
-                                    </td>
-                                    <td class="w-20p">
-                                        @item.HoTen
-                                    </td>
-                                    <td class="w-20p">
-                                        @item.Email
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.CreatedDate
-                                    </td>
-                                    <td class="w-10p">
-                                        @item.DangHoatDong
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.NhanQuangCao
-                                    </td>
-
-
-                                    <td class="w-6p">
-                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
-
-                                        @*<a asp-action="Delete" asp-route-id="@item.Id"><i class="nc-icon nc-simple-remove"></i></a>*@
-                                        <a href="#" class="btn btn-danger" onclick="ConfirmDelete(@item.Id)"><i class="glyphicon glyphicon-trash"></i> </a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <a href="#" class="close" data-dismiss="modal">&times;</a>
-                    <h3 class="modal-title">Delete Employee</h3>
-                </div>
-                <div class="modal-body">
-                    <h4>Are you sure ? You want to delete this. </h4>
-
-                    <div style="text-align:center;display:none" id="loaderDiv">
-                        <img src="~/Content/InternetSlowdown_Day.gif" width="150" />
-                    </div>
-
-                </div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-                    <a href="#" class="btn btn-success" onclick="DeleteEmployee()">Confirm</a>
+              
+                <div class="table-responsive" id="khachhang-list">
+                    @await Html.PartialAsync("_ListPartial",data)
                 </div>
 
             </div>
-
         </div>
-
     </div>
-    <input type="hidden" id="hiddenEmployeeId" />
-
 </div>
+
 <div style="margin: 0 auto">
 
     @await Html.PartialAsync("Pagination", paging)
 </div>
+<script src="~/js/app/khachhang.js"></script>
 
 <script>
-    function search(event) {
-        event.preventDefault();
-        var searchTxt = $('#search-khachhang').val();
-
-        var path = `${window.location.origin}/KhachHang?pageIndex=1&pageSize=20&name=${searchTxt}`;
-
-        window.location.href = path;
-    }
-
-</script>
-<script>
-
-    var ConfirmDelete = function (Id) {
-
-        $("#hiddenEmployeeId").val(Id);
-        $("#myModal").modal('show');
-
-    }
-
-    var DeleteEmployee = function () {
-
-        $("#loaderDiv").show();
-
-        var loaiId = $("#hiddenEmployeeId").val();
-
-        $.ajax({
-
-            type: "POST",
-            url: "/Loai/DeleteEmployee",
-            data: { Id: loaiId },
-            success: function (result) {
-                $("#loaderDiv").hide();
-                $("#myModal").modal("hide");
-                $("#row_" + empId).remove();
-
-            }
-
-        })
-
-    }
+    var currentPage = @currentPage;
+    var pageSize = @pageSize;
 </script>
