--- a/School/WebApplication1/Views/Loai/List.cshtml
+++ b/School/WebApplication1/Views/Loai/List.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Loai";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "Loai");
+    var currentPage = Model.CurrentPage;
+    var pageSize = Model.PageSize;
+    var data = Model.Data.ToList();
 }
 
 
@@ -14,18 +17,25 @@
             <div class="card-header">
                 <div class="row">
 
-                    <form class="update col-md-2" action="https://localhost:44319/Loai/Add">
-                        <button type="submit" class="btn btn-primary btn-round">Thêm mới</button>
+                    <!--<form class="update col-md-2" action="https://localhost:44319/Loai/Add">-->
+                    @*<input type="submit" name="submit" class="btn btn-primary btn-round"> </input>*@
+                    <!--<input type="submit" name="submit" value="Thêm mới" id="them-loai" onclick="add(event)" class="btn btn-primary btn-round" />
+
+                    </form>-->
+                    <form class="update col-md-2">
+                        <a href="#" class="btn btn-primary btn-round" onclick="Add(0)">Thêm Loại</a>
                     </form>
-                    @*<select id="SearchBy">
-                            <option value="Name">Name</option>
-                            <option value="ID">ID</option>
-                        </select>*@
-                    <br /> <br />
+                    
+
+                    @*<div class="table-responsive" id="loai-add">
+                        @await Html.PartialAsync("_ListPartial2", data)
+                    </div>*@
+
+
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
-                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-loai" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-loai" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
 
@@ -58,67 +68,23 @@
                             <th class="w-10p">Thao Tác</th>
                         </tr>
                 </table>
-                <div class="table-responsive">
-                    <table class="table tbl-contents">
-                        <tbody id="DataSearching">
-                            @{
-                                var count = 0;
-                            }
-                            @foreach (var item in Model.Data.ToList())
-                            {
-                                count++;
-                                <tr>
-                                    <td class="w-5p">
-                                        @count
-                                    </td>
-                                    <td class="w-15p">
-                                        @item.TenLoai
-                                    </td>
-                                    <td class="w-20p">
-                                        @item.Mota
-                                    </td>
-                                    <td class="w-10p">
-                                        @item.MaLoaiCha
-                                    </td>
-                                    <td class="w-8p">
-                                    <td>
-                                        @item.CreatedDate
-                                    </td>
-                                    <td class="w-8p">
-                                        @item.UpdatedDate
-                                    </td>
-                                    <td class="w-15p">
-                                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
 
-                                        <a href="#" class="btn btn-danger" @*asp-action="Delete"*@ onclick="DeleteLoai(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
+                <div class="table-responsive" id="loai-list">
+                    @await Html.PartialAsync("_ListPartial", data)
+                </div>
 
-                                        @*<td><a href="#" class="btn btn-danger" onclick="ConfirmDelete(@item.EmployeeId)"><i class="glyphicon glyphicon-trash"></i> </a> </td>*@
-
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-
-                    <div class="modal fade" id="myModal">
+                <div class="modal fade" id="myModal1">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <a href="#" class="close" data-dismiss="modal">&times;</a>
-                                    <h3 class="modal-title">Delete Loại</h3>
+                                    <h3 class="modal-title">AddEdit</h3>
                                 </div>
-                                <div class="modal-body">
-                                    <h4>Are you sure ? You want to delete this. </h4>
+                                <div class="modal-body" id="myModalBodyDiv1">
 
-                                    <div style="text-align:center;display:none" id="loaderDiv">
-                                        <img src="~/Content/InternetSlowdown_Day.gif" width="150" />
-                                    </div>
 
                                 </div>
-                                <div class="modal-footer">
-                                    <a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-                                    <a href="#" class="btn btn-success" onclick="DeleteLoai()">Confirm</a>
-                                </div>
+
 
                             </div>
 
@@ -126,77 +92,30 @@
 
                     </div>
 
-                </div>
+                    <input type="hidden" id="hiddenEmployeeId" />
+
+
             </div>
         </div>
     </div>
-
-
-    @*hidden field for storing current employeeId*@
-    <input type="hidden" id="hiddenEmployeeId" />
 </div>
+
+
+@*</div>*@
 <div style="margin: 0 auto">
 
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
-
+<script src="~/js/app/loai.js"></script>
 <script>
-    function search(event) {
-        event.preventDefault();
-        var searchTxt = $('#search-loai').val();
+     var currentPage = @currentPage;
+    var pageSize = @pageSize;
 
-        var path = `${window.location.origin}/Loai?pageIndex=1&pageSize=20&name=${searchTxt}`;
-
-        window.location.href = path;
-        };
-
-     @*$.ajax({
-        type: "POST",
-        url: '@Url.Action("Delete")',
-        data: JSON.stringify({ Id: id }), //use id here
-        dataType: "json",
-        contentType: "application/json; charset=utf-8",
-        success: function () {
-            alert("Data has been deleted.");
-            LoadData();
-        },
-        error: function () {
-            alert("Error while deleting data");
-        }
-    });*@
-</script>
-
-<script>
-
-    var DeleteLoai = function (id) {
-
-        $("#hiddenEmployeeId").val(id);
-        $("#myModal").modal('show');
-
+    function Add(Id) {
+        $("#form")[0].reset();
+        $("#ModalTitle").html("Thêm Loại");
+        $("#MyModal1").modal();
     }
-
-    var DeleteEmployee = function () {
-
-        $("#loaderDiv").show();
-
-        var loaiid = $("#hiddenEmployeeId").val();
-
-        $.ajax({
-
-            type: "POST",
-            url: "/Loai/DeleteLoai",
-            data: { id: empId },
-            success: function (result) {
-                $("#loaderdiv").hide();
-                $("#mymodal").modal("hide");
-                $("#row_" + empid).remove();
-
-            }
-
-        })
-
-    }
-
 </script>
 
