--- a/School/WebApplication1/wwwroot/css/app-style.css
+++ b/School/WebApplication1/wwwroot/css/app-style.css
@@ -1,70 +1,4 @@
-﻿/*css scroll*/
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-    background-color: #F2F3F3;
-    border-radius: 2.5px;
-}
-
-::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
-    background-color: #0888b1;
-}
-
-::-webkit-scrollbar-thumb {
-    width: 5px;
-    border-radius: 2.5px;
-    background-color: #0888b1;
-}
-/*end*/
-
-/*common style*/
-.pull-right {
-    float: right !important;
-}
-
-.pull-left {
-    float: left !important;
-}
-
-.w-2p {
-    width: 2%;
-}
-
-.w-3p {
-    width: 3%;
-}
-
-.w-5p {
-    width: 5%;
-}
-
-.w-8p {
-    width: 8%;
-}
-
-.w-11p {
-    width: 11%;
-}
-
-.w-12p {
-    width: 12%;
-}
-
-
-.w-10p {
-    width: 10%;
-}
-
-.w-15p {
-    width: 15%;
-}
-
-.w-20p {
-    width: 20%;
-}
-/*end common style*/
-.footer.footer-black.footer-white {
+﻿.footer.footer-black.footer-white {
     line-height: 7px;
     position: fixed;
     height: 50px;
