--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
     <link href="assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="assets/demo/demo.css" rel="stylesheet" />
-    <link href="~/css/app-style.css" rel="stylesheet" />
+    <link href="~/css/app-style.css" rel="stylesheet" />    
+    <link href="~/css/site.css" rel="stylesheet" />
     @* end libs theme *@
 </head>
 <body class="">
@@ -32,7 +33,29 @@
             @await Html.PartialAsync("_Footer")
         </div>
     </div>
-    <div id="common-modal" class="modal" data-backdrop="static"></div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="common-modal" tabindex="-1" role="dialog" aria-labelledby="common-modal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
 
