--- a/School/WebApplication1/wwwroot/css/site.css
+++ b/School/WebApplication1/wwwroot/css/site.css
@@ -1,6 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+html, body {
+    max-width: 100%;
+    max-height:100%;
+    overflow-x: hidden;
+    overflow-y:hidden;
+}
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -14,7 +20,6 @@ a {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
     border-color: #1861ac;
 }
 
@@ -73,24 +78,27 @@ body {
     line-height: 60px; /* Vertically center the text there */
 }
 
-/*css scroll*/
+/*css scroll
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
     background-color: #F2F3F3;
     border-radius: 2.5px;
+
 }
 
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
     background-color: #0888b1;
+
 }
 
 ::-webkit-scrollbar-thumb {
     width: 5px;
     border-radius: 2.5px;
     background-color: #0888b1;
-}
+
+}*/
 /*end*/
 
 /*common style*/
