--- a/School/WebApplication1/Views/Account/List.cshtml
+++ b/School/WebApplication1/Views/Account/List.cshtml
@@ -14,7 +14,9 @@
         <div class="card" style="margin-bottom: 11px;">
             <div class="card-header">
                 <div class="row">
-                    <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(event)">Thêm mới</a>
+                    <form class="update col-md-2">
+                        <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(event)">Thêm mới</a>
+                    </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline">
