[UPDATE] - Thêm modal tài khoản

--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -35,9 +35,7 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="common-modal" tabindex="-1" role="dialog" aria-labelledby="common-modal" aria-hidden="true">
-
-    </div>
+    <div class="modal fade" id="common-modal" tabindex="-1" role="dialog" aria-labelledby="common-modal" aria-hidden="true"></div>
 </body>
 </html>
 
