--- a/School/WebApplication1/Views/Account/List.cshtml
+++ b/School/WebApplication1/Views/Account/List.cshtml
@@ -15,7 +15,7 @@
             <div class="card-header">
                 <div class="row">
                     <form class="update col-md-2">
-                        <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(event)">Thêm mới</a>
+                        <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
