--- a/School/WebApplication1/Views/Account/_AddParital.cshtml
+++ b/School/WebApplication1/Views/Account/_AddParital.cshtml
@@ -10,8 +10,34 @@
         </div>
         <div class="modal-body">
             <form id="myForm">
-                <label>Haha</label>
-                <input type="text" />
+                <div class="form-group">
+                    <label asp-for="UserName" class="control-label">Tên Tài Khoản</label>
+                    <input id="taikhoan" value="@Model.UserName" class="form-control" longProp="userName" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label">Mật Khẩu</label>
+                    <input id="matkhau" asp-for="Password" class="form-control" required />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Role" class="control-label">Phân Quyền</label>
+                    <input id="phanquyen" asp-for="Role" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="CreatedBy" class="control-label"></label>
+                    <input asp-for="CreatedBy" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="CreatedDate" class="control-label"></label>
+                    <input asp-for="CreatedDate" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="UpdatedBy" class="control-label"></label>
+                    <input asp-for="UpdatedBy" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="UpdatedDate" class="control-label"></label>
+                    <input asp-for="UpdatedDate" class="form-control" />
+                </div>
             </form>
         </div>
         <div class="modal-footer">
