--- a/School/WebApplication1/Views/Account/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/Account/_ListPartial.cshtml
@@ -28,7 +28,7 @@
                     @item.UpdatedDate
                 </td>
                 <td class="w-8p">
-                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                    <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
 
                     <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
                 </td>
