--- a/School/WebApplication1/Views/DonHang/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/DonHang/_ListPartial.cshtml
@@ -27,7 +27,7 @@
                     </td>
 
                     <td class="w-5p">
-                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                        <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
 
                         <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
 
