--- a/School/WebApplication1/Views/Loai/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/Loai/_ListPartial.cshtml
@@ -28,7 +28,7 @@
                     @item.UpdatedDate
                 </td>
                 <td class="w-15p">
-                    <a href="#" onclick="addEdit(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
+                    <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
 
                     <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
 
