--- a/School/WebApplication1/Views/Account/List.cshtml
+++ b/School/WebApplication1/Views/Account/List.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12">S
         <div class="card" style="margin-bottom: 11px;">
             <div class="card-header">
                 <div class="row">
@@ -18,7 +18,7 @@
                         <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
-                        <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
+                        <form style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline"  style="float:right">
                                 <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-Account" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
