--- a/School/WebApplication1/Views/HangHoa/List.cshtml
+++ b/School/WebApplication1/Views/HangHoa/List.cshtml
@@ -13,8 +13,8 @@
         <div class="card" style="margin-bottom: 11px;">
             <div class="card-header">
                 <div class="row">
-                    <form class="update col-md-2" action="https://localhost:44319/HangHoa/Add">
-                        <button type="submit" class="btn btn-primary btn-round">Thêm mới</button>
+                    <form class="update col-md-2">
+                        <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
@@ -62,7 +62,7 @@
     @await Html.PartialAsync("Pagination", paging)
 </div>
 
-<script src="~/js//app/hanghoa.js"></script>
+<script src="~/js/app/hanghoa.js"></script>
 <script>
     var currentPage = @currentPage;
     var pageSize = @pageSize;
