--- a/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
@@ -25,7 +25,7 @@
                         @item.ChiTiet
                     </td>
                     <td class="w-8p">
-                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="nc-icon nc-scissors"></i></a> |
+                        <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
 
                         <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
                     </td>
