--- a/School/WebApplication1/Views/HangHoa/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/HangHoa/_AddPartial.cshtml
@@ -12,7 +12,7 @@
             <form id="myForm">
                 <div class="form-group">
                     <label asp-for="TenHH" class="control-label">Tên Hàng Hóa</label>
-                    <input id="TenHH" value="@Model.TenHH" class="form-control" longProp="tenHH"/> 
+                    <input id="TenHH" value="@Model.TenHH" class="form-control"/> 
                 </div>
                 <div class="form-group">
                     <label asp-for="TenLoai" class="control-label">Tên Loại</label>
@@ -20,49 +20,49 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="SoLuong" class="control-label">Số Lượng</label>
-                    <input id="soluong" asp-for="SoLuong" class="form-control" />
+                    <input id="SoLuong" asp-for="SoLuong" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="DonGia" class="control-label">Đơn Giá</label>
-                    <input asp-for="DonGia" class="form-control" />
+                    <input id="DonGia" asp-for="DonGia" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="GiamGia" class="control-label">Giảm Giá</label>
-                    <input asp-for="GiamGia" class="form-control" />
+                    <input id="GiamGia" asp-for="GiamGia" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="ChiTiet" class="control-label">Chi Tiết</label>
-                    <input asp-for="ChiTiet" class="form-control" />
+                    <input id="ChiTiet" asp-for="ChiTiet" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="IdLoai" class="control-label">Id Loại</label>
-                    <input asp-for="IdLoai" class="form-control" />
+                    <input id="IdLoai" asp-for="IdLoai" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="MaLoai" class="control-label">Mã Loại</label>
-                    <input asp-for="MaLoai" class="form-control" />
+                    <input id="MaLoai" asp-for="MaLoai" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedBy" class="control-label"></label>
-                    <input asp-for="CreatedBy" class="form-control" />
+                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedDate" class="control-label"></label>
-                    <input asp-for="CreatedDate" class="form-control" />
+                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input asp-for="UpdatedDate" class="form-control" />
+                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input asp-for="UpdatedBy" class="form-control" />
+                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
                 </div>
             </form>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="btn-save" onclick="SubmitForm()"></button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-save" onclick="SubmitForm()"></button>
         </div>
     </div>
 </div>
