--- a/School/WebApplication1/Views/KhachHang/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/KhachHang/_AddPartial.cshtml
@@ -12,49 +12,49 @@
             <form id="myForm">
                 <div class="form-group">
                     <label asp-for="HoTen" class="control-label">Họ Tên</label>
-                    <input value="@Model.HoTen" class="form-control" />
+                    <input id="HoTen" value="@Model.HoTen" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <input id="Email" asp-for="Email" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="MatKhau" class="control-label">Mật Khẩu</label>
-                    <input asp-for="MatKhau" class="form-control" />
+                    <input id="MatKhau" asp-for="MatKhau" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="RandomKey" class="control-label"></label>
-                    <input asp-for="RandomKey" class="form-control" />
+                    <input id="RandomKey" asp-for="RandomKey" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="DangHoatDong" class="control-label">Đang Hoạt Động</label>
-                    <input asp-for="DangHoatDong" class="form-control" />
+                    <input id="DangHoatDong" asp-for="DangHoatDong" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="NhanQuangCao" class="control-label">Nhận Quảng Cáo</label>
-                    <input asp-for="NhanQuangCao" class="form-control" />
+                    <input id="NhanQuangCao" asp-for="NhanQuangCao" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedBy" class="control-label"></label>
-                    <input asp-for="CreatedBy" class="form-control" />
+                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedDate" class="control-label"></label>
-                    <input asp-for="CreatedDate" class="form-control" />
+                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input asp-for="UpdatedDate" class="form-control" />
+                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input asp-for="UpdatedBy" class="form-control" />
+                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
                 </div>
             </form>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="btn-save" onclick="SubmitForm()"></button>
+            <button type="button" class="btn btn-primary"  data-dismiss="modal" id="btn-save" onclick="SubmitForm()"></button>
         </div>
     </div>
 </div>
