--- a/School/WebApplication1/Views/Loai/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/Loai/_AddPartial.cshtml
@@ -12,54 +12,37 @@
             <form id="myForm">
                 <div class="form-group">
                     <label asp-for="TenLoai" class="control-label">Tên Loại</label>
-                    <input value="@Model.TenLoai" class="form-control" />
+                    <input id="TenLoai" value="@Model.TenLoai" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Mota" class="control-label">Mô Tả</label>
-                    <input asp-for="Mota" class="form-control" />
+                    <input id="Mota" asp-for="Mota" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="MaLoaiCha" class="control-label">Mã Loại Cha</label>
-                    <input asp-for="MaLoaiCha" class="form-control" />
+                    <input id="MaLoaiCha" asp-for="MaLoaiCha" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedBy" class="control-label"></label>
-                    <input asp-for="CreatedBy" class="form-control" />
+                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedDate" class="control-label"></label>
-                    <input asp-for="CreatedDate" class="form-control" />
+                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input asp-for="UpdatedDate" class="form-control" />
+                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input asp-for="UpdatedBy" class="form-control" />
+                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
                 </div>
             </form>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="btn-save" onclick="SubmitForm()"></button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-save" onclick="SubmitForm(@Model.Id)"></button>
         </div>
     </div>
 </div>
-
-<script>
-    $("#btn-save").click(function () {
-        var data = $("#myForm").serialize();
-        $.ajax({
-            type: "Post",
-            url: "/LoaiController/SaveDataInDatabase",
-            data: data,
-            success: function (result) {
-                alert("Success !");
-                window.location.href = "Loai";
-                $('#common-modal').modal('hide');
-            }
-
-        })
-    })
-</script>
