--- a/School/WebApplication1/Views/Account/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/Account/_AddPartial.cshtml
@@ -10,9 +10,12 @@
         </div>
         <div class="modal-body">
             <form id="myForm">
+                <div class="form-group" style="display:none">
+                    <input id="Id" value="@Model.Id" class="form-control"/>
+                </div>
                 <div class="form-group">
                     <label asp-for="UserName" class="control-label">Tên Tài Khoản</label>
-                    <input id="UserName" value="@Model.UserName" class="form-control" longProp="userName" />
+                    <input id="UserName" value="@Model.UserName" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label">Mật Khẩu</label>
@@ -20,29 +23,23 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Role" class="control-label">Phân Quyền</label>
-                    <input id="Role" asp-for="Role" class="form-control" />
+                    <input id="Role" asp-for="Role" class="form-control" required />
                 </div>
                 <div class="form-group">
                     <label asp-for="CreatedBy" class="control-label"></label>
-                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="CreatedDate" class="control-label"></label>
-                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
+                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" required />
                 </div>
                 <div class="form-group">
                     <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
+                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" required />
                 </div>
             </form>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-save" onclick="SubmitForm()"></button>
+            <!--<input type="submit" class="btn btn-primary"--> @*data-dismiss="modal"*@ <!--id="btn-save" onclick="SubmitForm()"/>-->
+
         </div>
     </div>
 </div>
