--- a/School/WebApplication1/Views/ChiTietDH/List.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/List.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "ChiTietDonHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "ChiTietDonHang");
+    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "ChiTietDH");
     var currentPage = Model.CurrentPage;
     var pageSize = Model.PageSize;
     var data = Model.Data.ToList();
