--- a/School/WebApplication1/Views/Loai/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/Loai/_AddPartial.cshtml
@@ -10,9 +10,12 @@
         </div>
         <div class="modal-body">
             <form id="myForm">
+                <div class="form-group" style="display:none">
+                    <input id="Id" value="@Model.Id" class="form-control" />
+                </div>
                 <div class="form-group">
                     <label asp-for="TenLoai" class="control-label">Tên Loại</label>
-                    <input id="TenLoai" value="@Model.TenLoai" class="form-control" />
+                    <input id="TenLoai" value="@Model.TenLoai" class="form-control"/>
                 </div>
                 <div class="form-group">
                     <label asp-for="Mota" class="control-label">Mô Tả</label>
@@ -27,14 +30,6 @@
                     <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="CreatedDate" class="control-label"></label>
-                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
-                </div>
-                <div class="form-group">
                     <label asp-for="UpdatedBy" class="control-label"></label>
                     <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
                 </div>
@@ -42,7 +37,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-save" onclick="SubmitForm(@Model.Id)"></button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" id="btn-save" onclick="SubmitForm()"></button>
         </div>
     </div>
 </div>
