--- a/School/WebApplication1/Views/DonHang/List.cshtml
+++ b/School/WebApplication1/Views/DonHang/List.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "DonHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize,"DonHang");
+    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, Model.CurrentPage, "DonHang");
     var currentPage = Model.CurrentPage;
     var pageSize = Model.PageSize;
     var data = Model.Data.ToList();
@@ -18,7 +18,7 @@
                     </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
-                            <div class="form-group from-inline"  style="float:right">
+                            <div class="form-group from-inline" style="float:right">
                                 <input placeholder="Nhập" type="text" name="searchkey" id="search-DonHang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="form-control" onclick="search(event)" id="btn-search" />
                             </div>
@@ -33,7 +33,7 @@
                             <th class="w-3p">
                                 STT
                             </th>
-                           
+
                             <th class="w-10p">
                                 Phí Vận Chuyển
                             </th>
@@ -49,8 +49,8 @@
                         </tr>
                 </table>
 
-                <div class="table-responsive"id="donhang-list">
-                    @await Html.PartialAsync("_ListPartial",data)
+                <div class="table-responsive" id="donhang-list">
+                    @await Html.PartialAsync("_ListPartial", data)
                 </div>
 
             </div>
