--- a/School/WebApplication1/wwwroot/css/site.css
+++ b/School/WebApplication1/wwwroot/css/site.css
@@ -3,10 +3,11 @@ for details on configuring this project to bundle and minify static web assets. 
 
 html, body {
     max-width: 100%;
-    max-height:100%;
+    max-height: 100%;
     overflow-x: hidden;
-    overflow-y:hidden;
+    overflow-y: hidden;
 }
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -145,5 +146,13 @@ body {
 
 .w-20p {
     width: 20%;
+}
+
+.hide {
+    display: none !important;
+}
+
+.show {
+    display: block !important;
 }
 /*end common style*/
