--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -1,4 +1,10 @@
-﻿@model Tuple<int, int, int, string>
+﻿@*
+    Item1: TotalRecords
+    Item2: PageSize
+    Item3: MenuName
+*@
+
+@model Tuple<int, int, string>
 @{
     var totalPages = Model.Item1 % Model.Item2 == 0 ? Model.Item1 / Model.Item2 : Model.Item1 / Model.Item2 + 1;
 }
@@ -6,20 +12,19 @@
     <p id="TotalRecords" class="pull-left">Total records: @Model.Item1</p>
     <ul class="pagination justify-content-end">
 
-        <li class="page-item active-pre" style="display:none">
-            <a class="page-link " onclick="Pre(@totalPages)" href="#" tabindex="-1">Previous</a>
+        <li class="page-item active-pre hide">
+            <a class="page-link " onclick="DoPaging(0, @Model.Item2, '@Model.Item3', @totalPages, 1)" href="#" tabindex="-1">Previous</a>
         </li>
 
         @for (var i = 1; i <= totalPages; i++)
         {
             var active = "";
-            if (i == Model.Item3) active = "active";
-            <li id="page" class="page-item @active page-item-@i"><a id="bodyClick" class="page-link page-link-@i" onclick="DoPaging(@i,@Model.Item2,@Model.Item3, '@Model.Item4')" href="#">@i</a></li>
-
+            if (i == 1) active = "active";
+            <li id="page" class="page-item @active page-item-@i" index="@i"><a id="bodyClick" class="page-link page-link-@i" onclick="DoPaging(@i, @Model.Item2, '@Model.Item3', @totalPages, 0)" href="#">@i</a></li>
         }
 
         <li class="page-item active-next">
-            <a class="page-link" onclick="Next(@totalPages)" href="#">Next</a>
+            <a class="page-link" onclick="DoPaging(0, @Model.Item2, '@Model.Item3', @totalPages, 2)" href="#">Next</a>
         </li>
     </ul>
 </nav>
